--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
         {
             "src": "mysite/wsgi.py",
             "use": "@vercel/python",
-            "connfig": { "maxLambdaSize": "15mb", "runtime": "python3.12"}
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.12"}
         }
     ],
     "routes": [
